--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
       </div>
       <div class="why-us">
         <h2 class="sub-title editorial">Why Us</h2>
-        <p class="description-about">
-          Tutorials by industry experts
-          Peer & expert code review
-          Coding exercises <br>
-          Access to our GitHub repos
-          Community forum <br>
-          Flashcard decks <br>
-          New videos every week
-        </p>
+        <ul class="description-about">
+          <li>Tutorials by industry experts</li>
+          <li>Peer & expert code review</li>
+          <li>Coding exercises </li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
       </div>
     </div>
   </main>
 
   <footer>
     <p class="attribution">
-      Coded by <a href="#" target="_blank">Michel Moreira</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/michel-moreira" target="_blank">Michel Moreira</a>.
     </p>
   </footer>
 </body>
